[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lsvxd"
authors = [{name = "Carlos Bone", email = "cdbon15@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
keywords = ["OpenCV", "MediaPipe Holistic", "ML", "LSV"]
dependencies = [
    "mediapipe >= 0.10.11",
    "opencv-contrib-python >= 4.9.0.80",
    "opencv-python >= 4.9.0.80",
    "scikit-learn >= 1.4.2",
    "tensorflow >= 2.16.1",
    "tensorflow-io-gcs-filesystem >= 0.36.0"
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/TSX-Corvo/lsv-recognition"
